styles/content/typography/lists/variables.less
@list-enabled: @typography-enabled;

/*
 * Responsive Scaling
 */

@list-screen-small-enabled: @layout-screen-small-enabled;
@list-screen-medium-enabled: @layout-screen-medium-enabled;
@list-screen-large-enabled: @layout-screen-large-enabled;
@list-screen-jumbo-enabled: @layout-screen-jumbo-enabled;

/*
 * List Layout
 */

/* Margin */

// Margin Top

@list-margin-top: 0;
@list-margin-top-screen-small: null;
@list-margin-top-screen-medium: null;
@list-margin-top-screen-large: null;
@list-margin-top-screen-jumbo: null;

// Margin Bottom

@list-margin-bottom: 0.8rem;
@list-margin-bottom-screen-small: null;
@list-margin-bottom-screen-medium: 1.1 * @list-margin-bottom;
@list-margin-bottom-screen-large: 1.2 * @list-margin-bottom;
@list-margin-bottom-screen-jumbo: null;

// Margin Left

@list-margin-left: null;
@list-margin-left-screen-small: null;
@list-margin-left-screen-medium: null;
@list-margin-left-screen-large: null;
@list-margin-left-screen-jumbo: null;

// Margin Right

@list-margin-right: null;
@list-margin-right-screen-small: null;
@list-margin-right-screen-medium: null;
@list-margin-right-screen-large: null;
@list-margin-right-screen-jumbo: null;

/* Padding */

// Padding Top

@list-padding-top: null;
@list-padding-top-screen-small: null;
@list-padding-top-screen-medium: null;
@list-padding-top-screen-large: null;
@list-padding-top-screen-jumbo: null;

// Padding Bottom

@list-padding-bottom: null;
@list-padding-bottom-screen-small: null;
@list-padding-bottom-screen-medium: null;
@list-padding-bottom-screen-large: null;
@list-padding-bottom-screen-jumbo: null;

// Padding Left

@list-padding-left: null;
@list-padding-left-screen-small: null;
@list-padding-left-screen-medium: null;
@list-padding-left-screen-large: null;
@list-padding-left-screen-jumbo: null;

// Padding Right

@list-padding-right: null;
@list-padding-right-screen-small: null;
@list-padding-right-screen-medium: null;
@list-padding-right-screen-large: null;
@list-padding-right-screen-jumbo: null;

/* Layout Variants */

// Short

@list-short-margin-top-scale: 0.5;
@list-short-margin-bottom-scale: 0.5;
@list-short-margin-left-scale: null;
@list-short-margin-right-scale: null;

@list-short-padding-top-scale: 0.5;
@list-short-padding-bottom-scale: 0.5;
@list-short-padding-left-scale: null;
@list-short-padding-right-scale: null;

// Tall

@list-tall-margin-top-scale: 2;
@list-tall-margin-bottom-scale: 2;
@list-tall-margin-left-scale: null;
@list-tall-margin-right-scale: null;

@list-tall-padding-top-scale: 2;
@list-tall-padding-bottom-scale: 2;
@list-tall-padding-left-scale: null;
@list-tall-padding-right-scale: null;

/*
 * List Item Text Styling
 */

@list-item-color: color-lighten(@neutral, 20);
@list-item-font-family: @font-family-sans-serif;
@list-item-font-style: null;
@list-item-font-weight: 400;
@list-item-text-transform: null;
@list-item-text-shadow: null;
@list-item-text-decoration: null;
@list-item-text-rendering: geometricPrecision;
@list-item-opacity: null;

/*
 * List Item Layout
 */

/* Margin */

// Margin Top

@list-item-margin-top: 0;
@list-item-margin-top-screen-small: null;
@list-item-margin-top-screen-medium: null;
@list-item-margin-top-screen-large: null;
@list-item-margin-top-screen-jumbo: null;

// Margin Bottom

@list-item-margin-bottom: 0.8rem * 0.5;
@list-item-margin-bottom-screen-small: null;
@list-item-margin-bottom-screen-medium: 1.1 * @list-item-margin-bottom;
@list-item-margin-bottom-screen-large: 1.2 * @list-item-margin-bottom;
@list-item-margin-bottom-screen-jumbo: null;

// Margin Left

@list-item-margin-left: null;
@list-item-margin-left-screen-small: null;
@list-item-margin-left-screen-medium: null;
@list-item-margin-left-screen-large: null;
@list-item-margin-left-screen-jumbo: null;

// Margin Right

@list-item-margin-right: null;
@list-item-margin-right-screen-small: null;
@list-item-margin-right-screen-medium: null;
@list-item-margin-right-screen-large: null;
@list-item-margin-right-screen-jumbo: null;

/* Padding */

// Padding Top

@list-item-padding-top: null;
@list-item-padding-top-screen-small: null;
@list-item-padding-top-screen-medium: null;
@list-item-padding-top-screen-large: null;
@list-item-padding-top-screen-jumbo: null;

// Padding Bottom

@list-item-padding-bottom: null;
@list-item-padding-bottom-screen-small: null;
@list-item-padding-bottom-screen-medium: null;
@list-item-padding-bottom-screen-large: null;
@list-item-padding-bottom-screen-jumbo: null;

// Padding Left

@list-item-padding-left: 0.8rem * 1.5;
@list-item-padding-left-screen-small: null;
@list-item-padding-left-screen-medium: 1.1 * @list-item-padding-left;
@list-item-padding-left-screen-large: 1.2 * @list-item-padding-left;
@list-item-padding-left-screen-jumbo: null;

// Padding Right

@list-item-padding-right: null;
@list-item-padding-right-screen-small: null;
@list-item-padding-right-screen-medium: null;
@list-item-padding-right-screen-large: null;
@list-item-padding-right-screen-jumbo: null;

/* Layout Variants */

// Short

@list-item-short-margin-top-scale: 0.5;
@list-item-short-margin-bottom-scale: 0.5;
@list-item-short-margin-left-scale: null;
@list-item-short-margin-right-scale: null;

@list-item-short-padding-top-scale: 0.5;
@list-item-short-padding-bottom-scale: 0.5;
@list-item-short-padding-left-scale: null;
@list-item-short-padding-right-scale: null;

// Tall

@list-item-tall-margin-top-scale: 2;
@list-item-tall-margin-bottom-scale: 2;
@list-item-tall-margin-left-scale: null;
@list-item-tall-margin-right-scale: null;

@list-item-tall-padding-top-scale: 2;
@list-item-tall-padding-bottom-scale: 2;
@list-item-tall-padding-left-scale: null;
@list-item-tall-padding-right-scale: null;

/*
 * List Item Bullet
 */

/* Styling */

// Normal

@list-item-bullet-color: color-lighten(@neutral, 20);
@list-item-bullet-shadow: null;
@list-item-bullet-opacity: null;

// Inverse (.inverse)

@list-item-inverse-bullet-enabled: true;
@list-item-inverse-bullet-color: color-lighten(@neutral, 70);
@list-item-inverse-bullet-shadow: null;
@list-item-inverse-bullet-opacity: null;

/* Layout */

// Border Radius

@list-item-bullet-border-radius: 50%;

// Width

@list-item-bullet-width: 16px * 0.3;
@list-item-bullet-width-screen-small: null;
@list-item-bullet-width-screen-medium: floor(1.05 * @list-item-bullet-width);
@list-item-bullet-width-screen-large: floor(1.1 * @list-item-bullet-width);
@list-item-bullet-width-screen-jumbo: null;

// Height

@list-item-bullet-height: 16px * 0.3;
@list-item-bullet-height-screen-small: null;
@list-item-bullet-height-screen-medium: floor(1.05 * @list-item-bullet-height);
@list-item-bullet-height-screen-large: floor(1.1 * @list-item-bullet-height);
@list-item-bullet-height-screen-jumbo: null;

// Line Height

@list-item-bullet-line-height: 16px * 1.4;
@list-item-bullet-line-height-screen-small: null;
@list-item-bullet-line-height-screen-medium: floor(1.05 * @list-item-bullet-line-height);
@list-item-bullet-line-height-screen-large: floor(1.1 * @list-item-bullet-line-height);
@list-item-bullet-line-height-screen-jumbo: null;

/*
 * Inline List
 */

/* Layout */

// Margin Vertical

@list-inline-margin-vertical: 0.8rem * 0.5;
@list-inline-margin-vertical-screen-small: null;
@list-inline-margin-vertical-screen-medium: 1.1 * @list-inline-margin-vertical;
@list-inline-margin-vertical-screen-large: 1.2 * @list-inline-margin-vertical;
@list-inline-margin-vertical-screen-jumbo: null;

// Margin Horizontal

@list-inline-margin-horizontal: 0.8rem * 1;
@list-inline-margin-horizontal-screen-small: null;
@list-inline-margin-horizontal-screen-medium: 1.1 * @list-inline-margin-horizontal;
@list-inline-margin-horizontal-screen-large: 1.2 * @list-inline-margin-horizontal;
@list-inline-margin-horizontal-screen-jumbo: null;

/*
 * Definition List
 */

/* Text Styling */

// Title

@definition-list-item-title-color: null;
@definition-list-item-title-font-family: null;
@definition-list-item-title-font-style: null;
@definition-list-item-title-font-weight: 600;
@definition-list-item-title-text-transform: null;
@definition-list-item-title-text-shadow: null;
@definition-list-item-title-text-decoration: null;
@definition-list-item-title-text-rendering: null;
@definition-list-item-title-opacity: null;

// Definition

@definition-list-item-color: null;
@definition-list-item-font-family: null;
@definition-list-item-font-style: null;
@definition-list-item-font-weight: null;
@definition-list-item-text-transform: null;
@definition-list-item-text-shadow: null;
@definition-list-item-text-decoration: null;
@definition-list-item-text-rendering: null;
@definition-list-item-opacity: null;

/* Layout */

// Title Margin Left

@definition-list-item-margin-left: null;
@definition-list-item-margin-left-screen-small: null;
@definition-list-item-margin-left-screen-medium: null;
@definition-list-item-margin-left-screen-large: null;
@definition-list-item-margin-left-screen-jumbo: null;

// Definition Margin Left

@definition-list-item-margin-left: null;
@definition-list-item-margin-left-screen-small: null;
@definition-list-item-margin-left-screen-medium: null;
@definition-list-item-margin-left-screen-large: null;
@definition-list-item-margin-left-screen-jumbo: null;

